--- a/example/StaticTablesExample/StaticTablesExample-Info.plist
+++ b/example/StaticTablesExample/StaticTablesExample-Info.plist
@@ -30,6 +30,10 @@
 	<true/>
 	<key>UIFileSharingEnabled</key>
 	<true/>
+	<key>UILaunchStoryboardName</key>
+	<string>Launch Screen</string>
+	<key>UIMainStoryboardFile</key>
+	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
