--- a/StaticTables.xcodeproj/xcshareddata/xcschemes/StaticTables.xcscheme
+++ b/StaticTables.xcodeproj/xcshareddata/xcschemes/StaticTables.xcscheme
@@ -16,7 +16,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "A1713504185007F800E56C4D"
                BuildableName = "libStaticTables.a"
-               BlueprintName = "StaticTables"
+               BlueprintName = "libStaticTables"
                ReferencedContainer = "container:StaticTables.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -58,7 +58,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A1713504185007F800E56C4D"
             BuildableName = "libStaticTables.a"
-            BlueprintName = "StaticTables"
+            BlueprintName = "libStaticTables"
             ReferencedContainer = "container:StaticTables.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -77,7 +77,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A1713504185007F800E56C4D"
             BuildableName = "libStaticTables.a"
-            BlueprintName = "StaticTables"
+            BlueprintName = "libStaticTables"
             ReferencedContainer = "container:StaticTables.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -95,7 +95,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A1713504185007F800E56C4D"
             BuildableName = "libStaticTables.a"
-            BlueprintName = "StaticTables"
+            BlueprintName = "libStaticTables"
             ReferencedContainer = "container:StaticTables.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
