Update the schemes.

--- a/StaticTables.xcodeproj/xcshareddata/xcschemes/libStaticTables.xcscheme
+++ b/StaticTables.xcodeproj/xcshareddata/xcschemes/libStaticTables.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0700"
+   LastUpgradeVersion = "0630"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,23 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A18D9BEF1B44E64F00F43BF5"
-               BuildableName = "StaticTables.framework"
-               BlueprintName = "StaticTables"
+               BlueprintIdentifier = "A1713504185007F800E56C4D"
+               BuildableName = "libStaticTables.a"
+               BlueprintName = "libStaticTables"
+               ReferencedContainer = "container:StaticTables.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A1E0B40C1AE5141D00C7E308"
+               BuildableName = "StaticTablesTests.xctest"
+               BlueprintName = "StaticTablesTests"
                ReferencedContainer = "container:StaticTables.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,7 +42,26 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A1E0B40C1AE5141D00C7E308"
+               BuildableName = "StaticTablesTests.xctest"
+               BlueprintName = "StaticTablesTests"
+               ReferencedContainer = "container:StaticTables.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "A1713504185007F800E56C4D"
+            BuildableName = "libStaticTables.a"
+            BlueprintName = "libStaticTables"
+            ReferencedContainer = "container:StaticTables.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -45,9 +78,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A18D9BEF1B44E64F00F43BF5"
-            BuildableName = "StaticTables.framework"
-            BlueprintName = "StaticTables"
+            BlueprintIdentifier = "A1713504185007F800E56C4D"
+            BuildableName = "libStaticTables.a"
+            BlueprintName = "libStaticTables"
             ReferencedContainer = "container:StaticTables.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -63,9 +96,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A18D9BEF1B44E64F00F43BF5"
-            BuildableName = "StaticTables.framework"
-            BlueprintName = "StaticTables"
+            BlueprintIdentifier = "A1713504185007F800E56C4D"
+            BuildableName = "libStaticTables.a"
+            BlueprintName = "libStaticTables"
             ReferencedContainer = "container:StaticTables.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
