--- a/StaticTables.xcodeproj/xcshareddata/xcschemes/StaticTables.xcscheme
+++ b/StaticTables.xcodeproj/xcshareddata/xcschemes/StaticTables.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0730"
+   LastUpgradeVersion = "0900"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,23 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A1713504185007F800E56C4D"
-               BuildableName = "libStaticTables.a"
-               BlueprintName = "libStaticTables"
-               ReferencedContainer = "container:StaticTables.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A1E0B40C1AE5141D00C7E308"
-               BuildableName = "StaticTablesTests.xctest"
-               BlueprintName = "StaticTablesTests"
+               BlueprintIdentifier = "A18D9BEF1B44E64F00F43BF5"
+               BuildableName = "StaticTables.framework"
+               BlueprintName = "StaticTables"
                ReferencedContainer = "container:StaticTables.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -40,7 +26,9 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      language = ""
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -56,9 +44,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A1713504185007F800E56C4D"
-            BuildableName = "libStaticTables.a"
-            BlueprintName = "libStaticTables"
+            BlueprintIdentifier = "A18D9BEF1B44E64F00F43BF5"
+            BuildableName = "StaticTables.framework"
+            BlueprintName = "StaticTables"
             ReferencedContainer = "container:StaticTables.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -69,6 +57,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -78,9 +67,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A1713504185007F800E56C4D"
-            BuildableName = "libStaticTables.a"
-            BlueprintName = "libStaticTables"
+            BlueprintIdentifier = "A18D9BEF1B44E64F00F43BF5"
+            BuildableName = "StaticTables.framework"
+            BlueprintName = "StaticTables"
             ReferencedContainer = "container:StaticTables.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -96,9 +85,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A1713504185007F800E56C4D"
-            BuildableName = "libStaticTables.a"
-            BlueprintName = "libStaticTables"
+            BlueprintIdentifier = "A18D9BEF1B44E64F00F43BF5"
+            BuildableName = "StaticTables.framework"
+            BlueprintName = "StaticTables"
             ReferencedContainer = "container:StaticTables.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
