--- a/StaticTables.xcodeproj/xcshareddata/xcschemes/libStaticTables.xcscheme
+++ b/StaticTables.xcodeproj/xcshareddata/xcschemes/libStaticTables.xcscheme
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0730"
+   LastUpgradeVersion = "0900"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A1713504185007F800E56C4D"
+               BuildableName = "libStaticTables.a"
+               BlueprintName = "libStaticTables"
+               ReferencedContainer = "container:StaticTables.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
@@ -26,6 +40,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
@@ -42,9 +57,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A1E0B40C1AE5141D00C7E308"
-            BuildableName = "StaticTablesTests.xctest"
-            BlueprintName = "StaticTablesTests"
+            BlueprintIdentifier = "A1713504185007F800E56C4D"
+            BuildableName = "libStaticTables.a"
+            BlueprintName = "libStaticTables"
             ReferencedContainer = "container:StaticTables.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -55,6 +70,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -64,9 +80,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A1E0B40C1AE5141D00C7E308"
-            BuildableName = "StaticTablesTests.xctest"
-            BlueprintName = "StaticTablesTests"
+            BlueprintIdentifier = "A1713504185007F800E56C4D"
+            BuildableName = "libStaticTables.a"
+            BlueprintName = "libStaticTables"
             ReferencedContainer = "container:StaticTables.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -82,9 +98,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A1E0B40C1AE5141D00C7E308"
-            BuildableName = "StaticTablesTests.xctest"
-            BlueprintName = "StaticTablesTests"
+            BlueprintIdentifier = "A1713504185007F800E56C4D"
+            BuildableName = "libStaticTables.a"
+            BlueprintName = "libStaticTables"
             ReferencedContainer = "container:StaticTables.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
